--- a/app/src/main/res/layout/fragment_wode.xml
+++ b/app/src/main/res/layout/fragment_wode.xml
@@ -10,73 +10,78 @@
 
     <!-- 顶部用户导航 -->
     <LinearLayout
+        android:id="@+id/ll_top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/ll_top"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/btn_normal"
-        android:orientation="horizontal"
-        android:layout_margin="10dp"
-        android:backgroundTint="@color/white">
+        android:backgroundTint="@color/white"
+        android:orientation="horizontal">
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/touxiang"
-            android:layout_margin="15dp">
-        </ImageView>
+            android:layout_margin="15dp"
+            android:src="@drawable/touxiang"></ImageView>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="15dp"
                 android:text="用户名"
-                android:textSize="18dp"
-                android:layout_margin="15dp">
-            </TextView>
+                android:textSize="18dp"></TextView>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:text="已经享受智慧生活"
-                    android:textSize="13dp"
-                    android:layout_margin="5dp">
-                </TextView>
+                    android:textSize="13dp"></TextView>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:text="80"
-                    android:textSize="13dp"
-                    android:layout_margin="5dp">
-                </TextView>
+                    android:textSize="13dp"></TextView>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:text="天"
-                    android:textSize="13dp"
-                    android:layout_margin="5dp">
-                </TextView>
+                    android:textSize="13dp"></TextView>
             </LinearLayout>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="今日心情">
-            </TextView>
+                android:text="今日心情"></TextView>
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/xinqing">
-            </ImageView>
+                android:src="@drawable/xinqing"></ImageView>
         </LinearLayout>
     </LinearLayout>
 
@@ -86,7 +91,59 @@
         android:id="@+id/fm"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         android:layout_below="@id/ll_top">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@color/white"
+
+            >
+            <Button
+                android:id="@+id/button"
+                android:background="@drawable/btn_normal_black"
+                android:layout_marginBottom="10dp"
+                android:layout_width="410dp"
+                android:layout_height="95dp"
+                android:textColor="@color/black"
+
+                android:text="Button" />
+            <Button
+                android:id="@+id/button1"
+                android:background="@drawable/btn_normal_black"
+                android:layout_marginBottom="10dp"
+                android:textColor="@color/black"
+
+                android:layout_width="410dp"
+                android:layout_height="95dp"
+                android:text="Button" />
+            <Button
+                android:id="@+id/button3"
+                android:background="@drawable/btn_normal"
+                android:layout_marginBottom="10dp"
+
+                android:layout_width="410dp"
+                android:layout_height="95dp"
+                android:text="Button" />
+            <Button
+                android:id="@+id/button4"
+                android:background="@drawable/btn_normal"
+                android:layout_marginBottom="10dp"
+
+                android:layout_width="410dp"
+                android:layout_height="95dp"
+                android:text="Button" />
+            <Button
+                android:id="@+id/button5"
+                android:background="@drawable/btn_normal"
+                android:layout_marginBottom="10dp"
+                android:layout_width="410dp"
+                android:layout_height="90dp"
+                android:text="Button" />
+        </LinearLayout>
+
     </FrameLayout>
 
 
