--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,22 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:background="@drawable/btn_normal_black"
+    android:orientation="horizontal"
 
-  <Button
-      android:background="@drawable/btn_normal_black"
-      android:drawableLeft="@drawable/zhineng"
-      android:drawableRight="@drawable/jiantou"
-      android:drawablePadding="10dp"
+    >
+<ImageView
+    android:id="@+id/btn_1"
+    android:layout_width="50dp"
+    android:layout_height="50dp"
+    android:src="@drawable/zhineng"
+    android:layout_marginTop="15dp"
+    android:layout_marginLeft="15dp"
+    android:layout_marginBottom="15dp">
+</ImageView>
+
+  <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginLeft="20dp"
+      android:layout_marginTop="30dp"
       android:text="智能场景"
-      android:layout_width="410dp"
-      android:layout_height="95dp"
-      >
+      android:textSize="20dp">
 
-  </Button>
+  </TextView>
+  <ImageButton
+      android:background="@color/white"
+      android:layout_width="40dp"
+      android:layout_height="40dp"
+      android:src="@drawable/jiantou"
+      android:layout_marginTop="20dp"
+      android:layout_marginLeft="170dp">
+
+  </ImageButton>
+  <!--  <Button-->
+<!--      android:background="@drawable/btn_normal_black"-->
+<!--      android:drawableLeft="@drawable/zhineng"-->
+<!--      android:drawableRight="@drawable/jiantou"-->
+<!--      android:drawablePadding="10dp"-->
+<!--      android:text="智能场景"-->
+<!--      android:layout_width="410dp"-->
+<!--      android:layout_height="95dp"-->
+<!--      >-->
+
+<!--  </Button>-->
 </LinearLayout>
 </LinearLayout>
